header + hero + nav commit

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     <div class="page_wrapper">
 
         <!-- Loader -->
-        <div class="loader">
+        <!-- <div class="loader">
             <div class="loader__border">
                 <span class="loader loader-bars"><span></span></span>
                 Eat Is Coming...
             </div>
-        </div>
+        </div> -->
         <!-- End Loading Spinner -->
 
         <!-- Logo -->
@@ -72,8 +72,8 @@
                 <h2 class="hero__title">Réservez le menu qui vous convient</h2>
                 <p class="hero__subtitle">Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
 
-                <div class="button">
-                    <a href="#" class="btn-1 btn-2">
+                <div class="hero__button">
+                    <a href="#" class="btn btn-1 btn-2">
                         Explorer nos restaurants
                     </a>
                 </div>
