home page commit need detals to be clean

--- a/index_1-lpg.html
+++ b/index_1-lpg.html
@@ -97,35 +97,39 @@
     <!-- Footer -->
     <footer>
 
-        <div class="footer__title">
-            <a href="./index.html" class="footer__logo">ohmyfood</a>
-        </div>
-
-        <div class="footer__list">
-            <ul>
-                <li>
-                    <a href="#">
-                        <span class="footer__list__icon"><i class="fas fa-utensils"></i></span>
-                        <p>Proposer un réstaurant</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="footer__list__icon"><i class="fas fa-hands-helping"></i></span>
-                        <p>Devenir partenaire</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <p>Mention légales</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <p>Contact</p>
-                    </a>
-                </li>
-            </ul>
+        <div class="footer">
+            <div class="footer__title">
+                <a href="./index.html" class="footer__logo">
+                    <h1>ohmyfood</h1>
+                </a>
+            </div>
+    
+            <div class="footer__list">
+                <ul>
+                    <li>
+                        <a href="#">
+                            <span class="footer__list__icon"><i class="fas fa-utensils"></i></span>
+                            <p>Proposer un réstaurant</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span class="footer__list__icon"><i class="fas fa-hands-helping"></i></span>
+                            <p>Devenir partenaire</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <p>Mention légales</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="mailto:omf@contact.com">
+                            <p>Contact</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
 
     </footer>
