--- a/index.html
+++ b/index.html
@@ -113,84 +113,73 @@
             <!-- Restaurants -->
             <section class="restaurants">
 
-                <h3 class="restaurant__title">Restaurants</h3>
+                <h3 class="restaurants__title">Restaurants</h3>
 
-                <div class="restaurants__card">
-                    <a href="./index_1-lpg.html">
-                        <div class="restaurant__card__img">
-                            <img src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                                alt="restaurant 1 img">
-                            <div class="restaurant__card__new">
-                                <p>Nouveau</p>
-                            </div>
-                        </div>
-                        <div class="restaurant__card__description">
-                            <h4 class="restaurant__title">La palette du goût</h4>
-                            <p class="restaurant__subtitle">Ménilmontant</p>
-                            <span class="restaurant__like">
+                <a href="./index_1-lpg.html">
+                    <div class="restaurants__card">
+                        <img src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                            alt="restaurant 1 img">
+                        <a href="#" class="restaurants__card__new">
+                            <p>Nouveau</p>
+                        </a>
+                        <div class="restaurants__card__description">
+                            <h4 class="restaurants__card__description__title">La palette du goût</h4>
+                            <p class="restaurants__card__description__subtitle">Ménilmontant</p>
+                            <span class="restaurants__card__description__like">
                                 <i class="far fa-heart"></i>
                                 <i class="fas fa-heart"></i>
                             </span>
                         </div>
-                    </a>
-                </div>
+                    </div>
+                </a>
 
-                <div class="restaurants__card">
-                    <a href="#">
-                        <!-- lien à insérer vers page hmtl suivante -->
-                        <div class="restaurant__card__img">
-                            <img src="./Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                                alt="restaurant 2 img">
-                            <div class="restaurant__card__new">
-                                <p>Nouveau</p>
-                            </div>
-                        </div>
-                        <div class="restaurant__card__description">
-                            <h4 class="restaurant__title">La note enchantée</h4>
-                            <p class="restaurant__subtitle">Charonne</p>
-                            <span class="restaurant__like">
+                <a href="./index_1-lpg.html">
+                    <div class="restaurants__card">
+                        <img src="./Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                            alt="restaurant 2 img">
+                        <a href="#" class="restaurants__card__new">
+                            <p>Nouveau</p>
+                        </a>
+                        <div class="restaurants__card__description">
+                            <h4 class="restaurants__card__description__title">La note enchantée</h4>
+                            <p class="restaurants__card__description__subtitle">Charonne</p>
+                            <span class="restaurants__card__description__like">
                                 <i class="far fa-heart"></i>
                                 <i class="fas fa-heart"></i>
                             </span>
                         </div>
-                    </a>
-                </div>
+                    </div>
+                </a>
 
-                <div class="restaurants__card">
-                    <a href="#">
-                        <!-- lien à insérer vers page hmtl suivante -->
-                        <div class="restaurant__card__img">
-                            <img src="./Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                                alt="restaurant 3 img">
-                        </div>
-                        <div class="restaurant__card__description">
-                            <h4 class="restaurant__title">À la française</h4>
-                            <p class="restaurant__subtitle">Cité Rouge</p>
-                            <span class="restaurant__like">
+                <a href="./index_1-lpg.html">
+                    <div class="restaurants__card">
+                        <img src="./Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                            alt="restaurant 3 img">
+                        <div class="restaurants__card__description">
+                            <h4 class="restaurants__card__description__title">À la française</h4>
+                            <p class="restaurants__card__description__subtitle">Cité Rouge</p>
+                            <span class="restaurants__card__description__like">
                                 <i class="far fa-heart"></i>
                                 <i class="fas fa-heart"></i>
                             </span>
                         </div>
-                    </a>
-                </div>
+                    </div>
+                </a>
 
-                <div class="restaurants__card">
-                    <a href="#">
-                        <!-- lien à insérer vers page hmtl suivante -->
-                        <div class="restaurant__card__img">
-                            <img src="./Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                                alt="restaurant 3 img">
-                        </div>
-                        <div class="restaurant__card__description">
-                            <h4 class="restaurant__title">Le délice des sens</h4>
-                            <p class="restaurant__subtitle">Foli-Méricourt</p>
-                            <span class="restaurant__like">
+                <a href="./index_1-lpg.html">
+                    <div class="restaurants__card">
+                        <img src="./Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                            alt="restaurant 4 img">
+                        <div class="restaurants__card__description">
+                            <h4 class="restaurants__card__description__title">Le délice des sens</h4>
+                            <p class="restaurants__card__description__subtitle">Foli-Méricourt</p>
+                            <span class="restaurants__card__description__like">
                                 <i class="far fa-heart"></i>
                                 <i class="fas fa-heart"></i>
                             </span>
                         </div>
-                    </a>
-                </div>
+                    </div>
+                </a>
 
             </section>
             <!-- End Restaurants -->
@@ -202,35 +191,39 @@
     <!-- Footer -->
     <footer>
 
-        <div class="footer__title">
-            <a href="./index.html" class="footer__logo">ohmyfood</a>
-        </div>
-
-        <div class="footer__list">
-            <ul>
-                <li>
-                    <a href="#">
-                        <span class="footer__list__icon"><i class="fas fa-utensils"></i></span>
-                        <p>Proposer un réstaurant</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="footer__list__icon"><i class="fas fa-hands-helping"></i></span>
-                        <p>Devenir partenaire</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <p>Mention légales</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="mailto:omf@contact.com">
-                        <p>Contact</p>
-                    </a>
-                </li>
-            </ul>
+        <div class="footer">
+            <div class="footer__title">
+                <a href="./index.html" class="footer__logo">
+                    <h1>ohmyfood</h1>
+                </a>
+            </div>
+    
+            <div class="footer__list">
+                <ul>
+                    <li>
+                        <a href="#">
+                            <span class="footer__list__icon"><i class="fas fa-utensils"></i></span>
+                            <p>Proposer un restaurant</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span class="footer__list__icon"><i class="fas fa-hands-helping"></i></span>
+                            <p>Devenir partenaire</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <p>Mention légales</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="mailto:omf@contact.com">
+                            <p>Contact</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
 
     </footer>
