dish page + animations h1/dish/backbtn

--- a/index_1-lpg.html
+++ b/index_1-lpg.html
@@ -43,50 +43,90 @@
         <!-- End Logo -->
 
         <!-- Image -->
-        <div class="img">
+        <div class="dish__img">
             <img src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-            alt="restaurant 1 img">        
+                alt="restaurant 1 img">
         </div>
         <!-- End Image -->
 
         <!-- Main Content -->
-        <main class="menu">
+        <main class="dish">
 
             <!-- Menu -->
-            <div class="menu__title">
+            <div class="dish__title">
                 <h1>La palette du goût</h1>
-                <span class="restaurant__like">
+                <span class="dish__title__like">
                     <i class="far fa-heart"></i>
                     <i class="fas fa-heart"></i>
                 </span>
             </div>
 
-            <section class="menu__order">
+            <article class="dish__order">
 
-                <div class="menu__box">
+                <div class="dish__order__title">
+                    <h5>entrées</h5>
+                </div>
 
-                    <div class="menu__box__title">
-                        <h5>entrées</h5>
-                        <span></span>
-                    </div>
+                <div class="dish__order__box">
 
-                    <div class="menu__box__items">
-                        <div class="items__dish">
-                            <h6>Fricassée d'escargot</h6>
-                            <p>Au piment d'espelette</p>
-                        </div>
-                        <div class="items__price">
-                            <p>25€</p>
+                    <a href="#" class="items">
+                        <!-- link implémentation future : video de prépa du plat, avis sur le plat, ingrédients allergènes -->
+                        <div class="items__food-price">
+                            <div class="food">
+                                <h6>Fricassée d'escargot</h6>
+                                <p>Au piment d'espelette</p>
+                            </div>
+                            <div class="price">
+                                <p>25€</p>
+                            </div>
                         </div>
                         <div class="items__check">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                    </div>
+                    </a>
+
+                    <a href="#" class="items">
+                        <!-- link implémentation future : video de prépa du plat, avis sur le plat, ingrédients allergènes -->
+                        <div class="items__food-price">
+                            <div class="food">
+                                <h6>Foie gras de canard mi-cuit</h6>
+                                <p>Et ses copeaux de truffe noire</p>
+                            </div>
+                            <div class="price">
+                                <p>35€</p>
+                            </div>
+                        </div>
+                        <div class="items__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </a>
+
+                    <a href="#" class="items">
+                        <!-- link implémentation future : video de prépa du plat, avis sur le plat, ingrédients allergènes -->
+                        <div class="items__food-price">
+                            <div class="food">
+                                <h6>Oeuf au plat</h6>
+                                <p>Assaisonné à la truffe sur lit de caviar</p>
+                            </div>
+                            <div class="price">
+                                <p>20€</p>
+                            </div>
+                        </div>
+                        <div class="items__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </a>
 
                 </div>
 
-            </section>
+            </article>
             <!-- End Menu -->
+
+            <div class="dish__button">
+                <a href="#" class="btn btn-1 btn-2">
+                    Commander
+                </a>
+            </div>
 
         </main>
         <!-- End Main Content -->
@@ -103,7 +143,7 @@
                     <h1>ohmyfood</h1>
                 </a>
             </div>
-    
+
             <div class="footer__list">
                 <ul>
                     <li>
