home page/nav : color i on active li commit

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                 <h3 class="restaurants__title">Restaurants</h3>
 
-                <a href="./index_1-lpg.html">
+                <a href="./index_1-lpg.html" target="_blank" title="par ici pour le menu !">
                     <div class="restaurants__card">
                         <img src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                             alt="restaurant 1 img">
@@ -133,7 +133,7 @@
                     </div>
                 </a>
 
-                <a href="./index_1-lpg.html">
+                <a href="./index_1-lpg.html" target="_blank" title="par ici pour le menu !">
                     <div class="restaurants__card">
                         <img src="./Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                             alt="restaurant 2 img">
@@ -151,7 +151,7 @@
                     </div>
                 </a>
 
-                <a href="./index_1-lpg.html">
+                <a href="./index_1-lpg.html" target="_blank" title="par ici pour le menu !">
                     <div class="restaurants__card">
                         <img src="./Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                             alt="restaurant 3 img">
@@ -166,7 +166,7 @@
                     </div>
                 </a>
 
-                <a href="./index_1-lpg.html">
+                <a href="./index_1-lpg.html" target="_blank" title="par ici pour le menu !">
                     <div class="restaurants__card">
                         <img src="./Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                             alt="restaurant 4 img">
