heart animation commit

--- a/index_1-lpg.html
+++ b/index_1-lpg.html
@@ -57,7 +57,7 @@
                 <h1>La palette du goût</h1>
                 <span class="dish__title__like">
                     <i class="far fa-heart"></i>
-                    <i class="fas fa-heart"></i>
+                    <!-- <i class="fas fa-heart"></i> -->
                 </span>
             </div>
 
