--- a/index.html
+++ b/index.html
@@ -125,10 +125,17 @@
                         <div class="restaurants__card__description">
                             <h4 class="restaurants__card__description__title">La palette du goût</h4>
                             <p class="restaurants__card__description__subtitle">Ménilmontant</p>
-                            <span class="restaurants__card__description__like">
-                                <i class="far fa-heart"></i>
-                                <i class="fas fa-heart"></i>
-                            </span>
+                            <a class="restaurants__card__description__like">
+                                <svg class="heart" viewBox="0 0 512 512" width="100">
+                                    <defs>
+                                      <linearGradient id="grad1" x1="0%" y1="0%" x2="0%" y2="100%">
+                                        <stop offset="0%" style="stop-color:#9356DC;stop-opacity:1" />
+                                        <stop offset="100%" style="stop-color:#FF79DA;stop-opacity:1" />
+                                      </linearGradient>
+                                    </defs>
+                                    <path d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z" />
+                                </svg>
+                            </a>
                         </div>
                     </div>
                 </a>
@@ -197,7 +204,7 @@
                     <h1>ohmyfood</h1>
                 </a>
             </div>
-    
+
             <div class="footer__list">
                 <ul>
                     <li>
