index 1 dish complete comit

--- a/index_1-lpg.html
+++ b/index_1-lpg.html
@@ -55,10 +55,22 @@
             <!-- Menu -->
             <div class="dish__title">
                 <h1>La palette du goût</h1>
-                <span class="dish__title__like">
-                    <i class="far fa-heart"></i>
-                    <!-- <i class="fas fa-heart"></i> -->
-                </span>
+                <div class="heart">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="-20 0 650 570">
+                        <defs>
+                            <linearGradient id="grad1" x1="0%" y1="0%" x2="0%" y2="100%">
+                                <stop offset="0%" style="stop-color:#9356DC" />
+                                <stop offset="100%" style="stop-color:#FF79DA" />
+                            </linearGradient>
+                        </defs>
+                        <path d="M462.3 62.6C407.5 15.9 326 24.3
+                             275.7 76.2L256 96.5l-19.7-20.3C186.1
+                              24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1
+                               149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9
+                                45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z">
+                        </path>
+                    </svg>
+                </div>
             </div>
 
             <article class="dish__order">
@@ -110,6 +122,118 @@
                             </div>
                             <div class="price">
                                 <p>20€</p>
+                            </div>
+                        </div>
+                        <div class="items__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </a>
+
+                </div>
+
+                <div class="dish__order__title">
+                    <h5>plats</h5>
+                </div>
+
+                <div class="dish__order__box">
+
+                    <a href="#" class="items">
+                        <!-- link implémentation future : video de prépa du plat, avis sur le plat, ingrédients allergènes -->
+                        <div class="items__food-price">
+                            <div class="food">
+                                <h6>Filet de boeuf aux herbes</h6>
+                                <p>Accompagné de sa ribambelle de légumes</p>
+                            </div>
+                            <div class="price">
+                                <p>40€</p>
+                            </div>
+                        </div>
+                        <div class="items__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </a>
+
+                    <a href="#" class="items">
+                        <!-- link implémentation future : video de prépa du plat, avis sur le plat, ingrédients allergènes -->
+                        <div class="items__food-price">
+                            <div class="food">
+                                <h6>Parmentier de queue de boeuf</h6>
+                                <p>À la truffe noire sur sa purée de panais</p>
+                            </div>
+                            <div class="price">
+                                <p>35€</p>
+                            </div>
+                        </div>
+                        <div class="items__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </a>
+
+                    <a href="#" class="items">
+                        <!-- link implémentation future : video de prépa du plat, avis sur le plat, ingrédients allergènes -->
+                        <div class="items__food-price">
+                            <div class="food">
+                                <h6>Filet de Turbot</h6>
+                                <p>Aux agrumes</p>
+                            </div>
+                            <div class="price">
+                                <p>44€</p>
+                            </div>
+                        </div>
+                        <div class="items__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </a>
+
+                </div>
+
+                <div class="dish__order__title">
+                    <h5>desserts</h5>
+                </div>
+
+                <div class="dish__order__box">
+
+                    <a href="#" class="items">
+                        <!-- link implémentation future : video de prépa du plat, avis sur le plat, ingrédients allergènes -->
+                        <div class="items__food-price">
+                            <div class="food">
+                                <h6>Paris-Brest</h6>
+                                <p>Revisité</p>
+                            </div>
+                            <div class="price">
+                                <p>18€</p>
+                            </div>
+                        </div>
+                        <div class="items__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </a>
+
+                    <a href="#" class="items">
+                        <!-- link implémentation future : video de prépa du plat, avis sur le plat, ingrédients allergènes -->
+                        <div class="items__food-price">
+                            <div class="food">
+                                <h6>Macaron au chocolat d'exception</h6>
+                                <p>Et glace à la vanille de Madagascar</p>
+                            </div>
+                            <div class="price">
+                                <p>22€</p>
+                            </div>
+                        </div>
+                        <div class="items__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </a>
+
+                    <a href="#" class="items">
+                        <!-- link implémentation future : video de prépa du plat, avis sur le plat, ingrédients allergènes -->
+                        <div class="items__food-price">
+                            <div class="food">
+                                <h6>Mousse au chocolat</h6>
+                                <p>Au piment d'espelette et à la truffe noire</p>
+                            </div>
+                            <div class="price">
+                                <p>23€</p>
                             </div>
                         </div>
                         <div class="items__check">
