--- a/index.html
+++ b/index.html
@@ -116,80 +116,94 @@
 
                 <h3 class="restaurants__title">Restaurants</h3>
 
-                <a href="./index_1-lpg.html" target="_blank" title="par ici pour le menu !">
-                    <div class="restaurants__card">
-                        <img src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                            alt="restaurant 1 img">
-                        <a href="#" class="restaurants__card__new">
-                            <p>Nouveau</p>
+                <div class="restaurants__list">
+
+                    <div class="grid">
+                        <a href="./index_1-lpg.html" target="_blank" title="par ici pour le menu !">
+                            <div class="restaurants__card">
+                                <img src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                                    alt="restaurant 1 img">
+                                <a href="#" class="restaurants__card__new">
+                                    <p>Nouveau</p>
+                                </a>
+                                <div class="restaurants__card__description">
+                                    <h4 class="restaurants__card__description__title">La palette du goût</h4>
+                                    <p class="restaurants__card__description__subtitle">Ménilmontant</p>
+                                    <a class="restaurants__card__description__like">
+                                        <span class="heart"><i class="far fa-heart"></i></span><!-- coeur vide -->
+                                        <span class="heart heart--grad"><i class="fas fa-heart"></i></span>
+                                        <!-- coeur plein -->
+                                    </a>
+                                </div>
+                            </div>
                         </a>
-                        <div class="restaurants__card__description">
-                            <h4 class="restaurants__card__description__title">La palette du goût</h4>
-                            <p class="restaurants__card__description__subtitle">Ménilmontant</p>
-                            <a class="restaurants__card__description__like">
-                                <span class="heart"><i class="far fa-heart"></i></span><!-- coeur vide -->
-                                <span class="heart heart--grad"><i class="fas fa-heart"></i></span><!-- coeur plein -->
-                            </a>
-                        </div>
                     </div>
-                </a>
 
-                <a href="./index_2-lpg.html" target="_blank" title="par ici pour le menu !">
-                    <div class="restaurants__card">
-                        <img src="./Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                            alt="restaurant 2 img">
-                        <a href="#" class="restaurants__card__new">
-                            <p>Nouveau</p>
+                    <div class="grid">
+                        <a href="./index_2-lpg.html" target="_blank" title="par ici pour le menu !">
+                            <div class="restaurants__card">
+                                <img src="./Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                                    alt="restaurant 2 img">
+                                <a href="#" class="restaurants__card__new">
+                                    <p>Nouveau</p>
+                                </a>
+                                <div class="restaurants__card__description">
+                                    <h4 class="restaurants__card__description__title">La note enchantée</h4>
+                                    <p class="restaurants__card__description__subtitle">Charonne</p>
+                                    <a class="restaurants__card__description__like">
+                                        <span class="heart"><i class="far fa-heart"></i></span><!-- coeur vide -->
+                                        <span class="heart heart--grad"><i class="fas fa-heart"></i></span>
+                                        <!-- coeur plein -->
+                                    </a>
+                                </div>
+                            </div>
                         </a>
-                        <div class="restaurants__card__description">
-                            <h4 class="restaurants__card__description__title">La note enchantée</h4>
-                            <p class="restaurants__card__description__subtitle">Charonne</p>
-                            <a class="restaurants__card__description__like">
-                                <span class="heart"><i class="far fa-heart"></i></span><!-- coeur vide -->
-                                <span class="heart heart--grad"><i class="fas fa-heart"></i></span><!-- coeur plein -->
-                            </a>
-                        </div>
                     </div>
-                </a>
 
-                <a href="./index_3-lpg.html" target="_blank" title="par ici pour le menu !">
-                    <div class="restaurants__card">
-                        <img src="./Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                            alt="restaurant 3 img">
-                        <div class="restaurants__card__description">
-                            <h4 class="restaurants__card__description__title">À la française</h4>
-                            <p class="restaurants__card__description__subtitle">Cité Rouge</p>
-                            <a class="restaurants__card__description__like">
-                                <span class="heart"><i class="far fa-heart"></i></span><!-- coeur vide -->
-                                <span class="heart heart--grad"><i class="fas fa-heart"></i></span><!-- coeur plein -->
-                            </a>
-                        </div>
+                    <div class="grid">
+                        <a href="./index_3-lpg.html" target="_blank" title="par ici pour le menu !">
+                            <div class="restaurants__card">
+                                <img src="./Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                                    alt="restaurant 3 img">
+                                <div class="restaurants__card__description">
+                                    <h4 class="restaurants__card__description__title">À la française</h4>
+                                    <p class="restaurants__card__description__subtitle">Cité Rouge</p>
+                                    <a class="restaurants__card__description__like">
+                                        <span class="heart"><i class="far fa-heart"></i></span><!-- coeur vide -->
+                                        <span class="heart heart--grad"><i class="fas fa-heart"></i></span>
+                                        <!-- coeur plein -->
+                                    </a>
+                                </div>
+                            </div>
+                        </a>
                     </div>
-                </a>
 
-                <a href="./index_4-lpg.html" target="_blank" title="par ici pour le menu !">
-                    <div class="restaurants__card">
-                        <img src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                            alt="restaurant 4 img">
-                        <div class="restaurants__card__description">
-                            <h4 class="restaurants__card__description__title">Le délice des sens</h4>
-                            <p class="restaurants__card__description__subtitle">Folie-Méricourt</p>
-                            <a class="restaurants__card__description__like">
-                                <svg class="heart" viewBox="-20 0 552 532" width="200">
-                                    <defs>
-                                        <linearGradient id="grad1" x1="0%" y1="0%" x2="0%" y2="100%">
-                                            <stop offset="0%" style="stop-color:#9356DC;stop-opacity:1" />
-                                            <stop offset="100%" style="stop-color:#FF79DA;stop-opacity:1" />
-                                        </linearGradient>
-                                    </defs>
-                                    <path
-                                        d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z" />
-                                </svg>
-                            </a>
-                        </div>
+                    <div class="grid">
+                        <a href="./index_4-lpg.html" target="_blank" title="par ici pour le menu !">
+                            <div class="restaurants__card">
+                                <img src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                                    alt="restaurant 4 img">
+                                <div class="restaurants__card__description">
+                                    <h4 class="restaurants__card__description__title">Le délice des sens</h4>
+                                    <p class="restaurants__card__description__subtitle">Folie-Méricourt</p>
+                                    <a class="restaurants__card__description__like">
+                                        <svg class="heart" viewBox="-20 0 552 532" width="200">
+                                            <defs>
+                                                <linearGradient id="grad1" x1="0%" y1="0%" x2="0%" y2="100%">
+                                                    <stop offset="0%" style="stop-color:#9356DC;stop-opacity:1" />
+                                                    <stop offset="100%" style="stop-color:#FF79DA;stop-opacity:1" />
+                                                </linearGradient>
+                                            </defs>
+                                            <path
+                                                d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </a>
                     </div>
-                </a>
 
+                </div>
             </section>
             <!-- End Restaurants -->
         </main>
