animation ghost / hover h1 color / color wrapper comit

--- a/index_1-lpg.html
+++ b/index_1-lpg.html
@@ -30,7 +30,7 @@
 <body>
 
     <!-- Page Wrapper -->
-    <div class="page_wrapper">
+    <div class="page_wrapper wrapper_color">
         <!-- Logo -->
         <header>
             <div class="header">
@@ -81,7 +81,7 @@
 
                 <div class="dish__order__box">
 
-                    <a href="#" class="items">
+                    <a href="#" class="items items--1">
                         <!-- link implémentation future : video de prépa du plat, avis sur le plat, ingrédients allergènes -->
                         <div class="items__food-price">
                             <div class="food">
@@ -97,7 +97,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="items">
+                    <a href="#" class="items items--2">
                         <!-- link implémentation future : video de prépa du plat, avis sur le plat, ingrédients allergènes -->
                         <div class="items__food-price">
                             <div class="food">
@@ -113,7 +113,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="items">
+                    <a href="#" class="items items--3">
                         <!-- link implémentation future : video de prépa du plat, avis sur le plat, ingrédients allergènes -->
                         <div class="items__food-price">
                             <div class="food">
@@ -137,7 +137,7 @@
 
                 <div class="dish__order__box">
 
-                    <a href="#" class="items">
+                    <a href="#" class="items items--1">
                         <!-- link implémentation future : video de prépa du plat, avis sur le plat, ingrédients allergènes -->
                         <div class="items__food-price">
                             <div class="food">
@@ -153,7 +153,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="items">
+                    <a href="#" class="items items--2">
                         <!-- link implémentation future : video de prépa du plat, avis sur le plat, ingrédients allergènes -->
                         <div class="items__food-price">
                             <div class="food">
@@ -169,7 +169,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="items">
+                    <a href="#" class="items items--3">
                         <!-- link implémentation future : video de prépa du plat, avis sur le plat, ingrédients allergènes -->
                         <div class="items__food-price">
                             <div class="food">
@@ -193,7 +193,7 @@
 
                 <div class="dish__order__box">
 
-                    <a href="#" class="items">
+                    <a href="#" class="items items--1">
                         <!-- link implémentation future : video de prépa du plat, avis sur le plat, ingrédients allergènes -->
                         <div class="items__food-price">
                             <div class="food">
@@ -209,7 +209,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="items">
+                    <a href="#" class="items items--2">
                         <!-- link implémentation future : video de prépa du plat, avis sur le plat, ingrédients allergènes -->
                         <div class="items__food-price">
                             <div class="food">
@@ -225,7 +225,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="items">
+                    <a href="#" class="items items--3">
                         <!-- link implémentation future : video de prépa du plat, avis sur le plat, ingrédients allergènes -->
                         <div class="items__food-price">
                             <div class="food">
