--- a/index.html
+++ b/index.html
@@ -31,11 +31,8 @@
 
     <!-- Loader -->
     <div class="loader">
-        <div class="loader__border">
-            <span class="loader loader--bars"><span>
-                    <!-- </span></span> -->
-                    <span>Eat Is Coming...</span>
-        </div>
+            <div class="loader__txt">Eat Is Coming...</div>
+            <span class="loader--bars"><span>
     </div>
     <!-- End Loading Spinner -->
 
