--- a/index_1-lpg.html
+++ b/index_1-lpg.html
@@ -85,7 +85,7 @@
                         <!-- link implémentation future : video de prépa du plat, avis sur le plat, ingrédients allergènes -->
                         <div class="items__food-price">
                             <div class="food">
-                                <h6>Fricassée d'escargot</h6>
+                                <h6>Fricassée d'escargots</h6>
                                 <p>Au piment d'espelette</p>
                             </div>
                             <div class="price">
