--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Loader -->
     <div class="loader">
             <div class="loader__txt">Eat Is Coming...</div>
-            <span class="loader--bars"><span>
+            <span class="loader--bars"></span>
     </div>
     <!-- End Loading Spinner -->
 
@@ -137,7 +137,7 @@
                     </div>
 
                     <div class="grid">
-                        <a href="./index_2-lpg.html" target="_blank" title="par ici pour le menu !">
+                        <a href="./index_2-lne.html" target="_blank" title="par ici pour le menu !">
                             <div class="restaurants__card">
                                 <img src="./Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                                     alt="restaurant 2 img">
@@ -158,7 +158,7 @@
                     </div>
 
                     <div class="grid">
-                        <a href="./index_3-lpg.html" target="_blank" title="par ici pour le menu !">
+                        <a href="./index_3-alf.html" target="_blank" title="par ici pour le menu !">
                             <div class="restaurants__card">
                                 <img src="./Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                                     alt="restaurant 3 img">
@@ -176,9 +176,9 @@
                     </div>
 
                     <div class="grid">
-                        <a href="./index_4-lpg.html" target="_blank" title="par ici pour le menu !">
+                        <a href="./index_4-ldds.html" target="_blank" title="par ici pour le menu !">
                             <div class="restaurants__card">
-                                <img src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                                <img src="./Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                                     alt="restaurant 4 img">
                                 <div class="restaurants__card__description">
                                     <h4 class="restaurants__card__description__title">Le délice des sens</h4>
