correct typo + link commit

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <link rel="stylesheet" href="./css/style.css">
 
-    <link rel="shortcut icon" href="./Maquettes Ohmyfood/images/logo/OMF !.ico" type="image/x-icon">
-    <link rel="icon" href="./Maquettes Ohmyfood/images/logo/OMF !.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./Maquettes_Ohmyfood/images/logo/OMF_!.ico" type="image/x-icon">
+    <link rel="icon" href="./Maquettes_Ohmyfood/images/logo/OMF_!.ico" type="image/x-icon">
 
     <meta name="description" content="P3 Ohmyfood">
     <meta name="author" content="Tom Boyer">
@@ -31,8 +31,8 @@
 
     <!-- Loader -->
     <div class="loader">
-            <div class="loader__txt">Eat Is Coming...</div>
-            <span class="loader--bars"></span>
+        <div class="loader__txt">Eat Is Coming...</div>
+        <span class="loader--bars"></span>
     </div>
     <!-- End Loading Spinner -->
 
@@ -118,19 +118,19 @@
                     <div class="grid">
                         <a href="./index_1-lpg.html" target="_blank" title="par ici pour le menu !">
                             <div class="restaurants__card">
-                                <img src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                                <img src="./Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                                     alt="restaurant 1 img">
-                                <a href="#" class="restaurants__card__new">
+                                <div class="restaurants__card__new">
                                     <p>Nouveau</p>
-                                </a>
+                                </div>
                                 <div class="restaurants__card__description">
                                     <h4 class="restaurants__card__description__title">La palette du goût</h4>
                                     <p class="restaurants__card__description__subtitle">Ménilmontant</p>
-                                    <a class="restaurants__card__description__like">
+                                    <div class="restaurants__card__description__like">
                                         <span class="heart"><i class="far fa-heart"></i></span><!-- coeur vide -->
                                         <span class="heart heart--grad"><i class="fas fa-heart"></i></span>
                                         <!-- coeur plein -->
-                                    </a>
+                                    </div>
                                 </div>
                             </div>
                         </a>
@@ -139,19 +139,19 @@
                     <div class="grid">
                         <a href="./index_2-lne.html" target="_blank" title="par ici pour le menu !">
                             <div class="restaurants__card">
-                                <img src="./Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                                <img src="./Maquettes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                                     alt="restaurant 2 img">
-                                <a href="#" class="restaurants__card__new">
+                                <div class="restaurants__card__new">
                                     <p>Nouveau</p>
-                                </a>
+                                </div>
                                 <div class="restaurants__card__description">
                                     <h4 class="restaurants__card__description__title">La note enchantée</h4>
                                     <p class="restaurants__card__description__subtitle">Charonne</p>
-                                    <a class="restaurants__card__description__like">
+                                    <div class="restaurants__card__description__like">
                                         <span class="heart"><i class="far fa-heart"></i></span><!-- coeur vide -->
                                         <span class="heart heart--grad"><i class="fas fa-heart"></i></span>
                                         <!-- coeur plein -->
-                                    </a>
+                                    </div>
                                 </div>
                             </div>
                         </a>
@@ -160,16 +160,16 @@
                     <div class="grid">
                         <a href="./index_3-alf.html" target="_blank" title="par ici pour le menu !">
                             <div class="restaurants__card">
-                                <img src="./Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                                <img src="./Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                                     alt="restaurant 3 img">
                                 <div class="restaurants__card__description">
                                     <h4 class="restaurants__card__description__title">À la française</h4>
                                     <p class="restaurants__card__description__subtitle">Cité Rouge</p>
-                                    <a class="restaurants__card__description__like">
+                                    <div class="restaurants__card__description__like">
                                         <span class="heart"><i class="far fa-heart"></i></span><!-- coeur vide -->
                                         <span class="heart heart--grad"><i class="fas fa-heart"></i></span>
                                         <!-- coeur plein -->
-                                    </a>
+                                    </div>
                                 </div>
                             </div>
                         </a>
@@ -178,12 +178,12 @@
                     <div class="grid">
                         <a href="./index_4-ldds.html" target="_blank" title="par ici pour le menu !">
                             <div class="restaurants__card">
-                                <img src="./Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                                <img src="./Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                                     alt="restaurant 4 img">
                                 <div class="restaurants__card__description">
                                     <h4 class="restaurants__card__description__title">Le délice des sens</h4>
                                     <p class="restaurants__card__description__subtitle">Folie-Méricourt</p>
-                                    <a class="restaurants__card__description__like">
+                                    <div class="restaurants__card__description__like">
                                         <svg class="heart" viewBox="-20 0 552 532" width="200">
                                             <defs>
                                                 <linearGradient id="grad1" x1="0%" y1="0%" x2="0%" y2="100%">
@@ -194,7 +194,7 @@
                                             <path
                                                 d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z" />
                                         </svg>
-                                    </a>
+                                    </div>
                                 </div>
                             </div>
                         </a>
