--- a/index_1-lpg.html
+++ b/index_1-lpg.html
@@ -17,8 +17,8 @@
 
     <link rel="stylesheet" href="./css/style.css">
 
-    <link rel="shortcut icon" href="./Maquettes Ohmyfood/images/logo/OMF !.ico" type="image/x-icon">
-    <link rel="icon" href="./Maquettes Ohmyfood/images/logo/OMF !.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./Maquettes_Ohmyfood/images/logo/OMF_!.ico" type="image/x-icon">
+    <link rel="icon" href="./Maquettes_Ohmyfood/images/logo/OMF_!.ico" type="image/x-icon">
 
     <meta name="description" content="P3 Ohmyfood">
     <meta name="author" content="Tom Boyer">
@@ -44,7 +44,7 @@
 
         <!-- Image -->
         <div class="dish__img">
-            <img src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            <img src="./Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="restaurant 1 img">
         </div>
         <!-- End Image -->
